<resources>
    <string name="app_name">Quire3D</string>
    <string name="close_button">Close</string>
    <string name="select_file">Import</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cube">Cube</string>
    <string name="Quad">Quad</string>
    <string name="Sphere">Sphere</string>
    <string name="Cone">Cone</string>
    <string name="Pyramid">Pyramid</string>
    <string name="Torus">Torus</string>
    <string name="Empty">Empty</string>
    <string name="position">Position:</string>
    <string name="scale">Scale:</string>
    <string name="rotation">Rotation:</string>
    <string name="floatZero">0.0000</string>
    <string name="floatOne">1.0000</string>
    <string name="Undo">Undo</string>
    <string name="Redo">Redo</string>
    <string name="Export">Export</string>
    <string name="Delete">Delete</string>
    <string name="Translate">Translate</string>
    <string name="Scale">Scale</string>
    <string name="Rotate">Rotate</string>
    <string name="Params">Params</string>
    <string name="Materials">Materials</string>
    <string name="Misc">Misc</string>
    <string name="Color">#FFFFFF</string>
    <string name="Duplicate">Duplicate</string>
    <string name="Add">Add</string>
    <string name="Assign">Assign</string>
    <string name="Texture">Texture</string>

    <string-array name="light_model_array">
        <item>Diffuse</item>
        <item>Blinn</item>
        <item>Phong</item>
        <item>Constant</item>
    </string-array>

</resources>
